<resources>
    <string name="app_name">Project3275Playmate</string>
    <string name="addskills">Add Skills</string>
    <string name="finishEdit">Finish Editing</string>
    <string name="title_activity_upload_hours">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_contact">Contact us</string>
    <string name="title_settings">Settings</string>
    <string name="profileHint">Write your level or skills of this game</string>
    <string name="submit">submit</string>
    <string name="hintEnterName">Enter your name</string>
    <string name="uploadHoursDate">Choose Date</string>
    <string name="hintHours">Enter Hours</string>
    <string name="btnSubmitHours">Submit</string>
    <string name="changeEmail">Enter new Email</string>
    <string name="ChangePW">Enter new Password</string>
    <string name="ChangeCPW">Enter Current Password</string>
    <string name="HomepageTitle">Playmate</string>
    <string name="HomepageText1_1">Find someone to play</string>
    <string name="HomepageText1_2">A large number of players, guaranteed quality</string>
    <string name="HomepageText2_1">Voice contact</string>
    <string name="HomepageText2_2">24-hour online customer service, place orders quickly</string>
    <string name="HomepageText3_1">Fate Encounters</string>
    <string name="HomepageText3_2">Find friends and discover new interests</string>
    <string name="HomepageText4_1">Academic help</string>
    <string name="HomepageText4_2">Honest brand, help difficulties</string>
    <string name="HomepageBtn1">Login</string>
    <string name="HomepageBtn2">Register</string>
    <string name="RegisterTitle">Join us now!</string>
    <string name="RegisterText1">Enter your Email</string>
    <string name="RegisterText2">Enter your password</string>
    <string name="RegisterText3">Enter your password again</string>
    <string name="RegisterRbtn1">Register as a Customer</string>
    <string name="RegisterRbtn2">Register as a Expert Player</string>
    <string name="UserMainText1">Welcome</string>
    <string name="UserMainText2">Balance:</string>
    <string name="UserMainBtn1">Choose Experts</string>
    <string name="UserMainBtn2">Top up</string>
    <string name="UserMainBtn3">View balance usage records</string>
    <string name="PlayerRegisterText1">Choose your main game</string>
    <string name="PlayerRegisterText2">Select your gender</string>
    <string name="PlayerRegisterText3">would you like to add your game profile now?</string>
    <string name="PlayerRegisterRbtn1">Girl</string>
    <string name="PlayerRegisterRbtn2">Boy</string>
    <string name="PlayerRegisterRbtn3">Sure</string>
    <string name="PlayerRegisterRbtn4">Later</string>
    <string name="EregisterSubmit">Submit</string>
    <string name="btnReviewE">Review Expert</string>
    <string name="welcome">WELCOME</string>
    <string name="coverText">CSIS 3275 Project</string>
    <string name="forgetPassword">Forget Password?</string>
    <string name="Enteremail">Enter your email</string>
    <string name="Enterpw">Enter Your Password</string>
    <string name="GO">GO</string>
    <string name="reset">RESET</string>
    <string name="ENTERID">Enter Playmate ID</string>
    <string name="RATING5">5</string>
    <string name="RATING4">4</string>
    <string name="RATING3">3</string>
    <string name="RATING2">2</string>
    <string name="RATING1">1</string>
    <string name="ratingExplain">From 5 to 1, please rate your playmate(5 is highest, 1 is lowest)</string>
    <string name="leaveMessage">Leave some comments if you want</string>
    <string name="hintsTopup">Click the icons to get topup information</string>
    <string name="hintTopupAmount">Enter Amount</string>
    <string name="topupAlert">Please contact our admin after top up</string>
    <string name="wagepage1">Your balance is</string>
    <string name="wageAmount">Enter the amount your want to withdraw</string>
    <string name="ratingString">Rating</string>
    <string name="uploadProfilebtn">Upload Profiles</string>
    <string name="uploadHoursLink">Upload Hours</string>
    <string name="getWagelink">Withdraw Wage</string>
    <string name="Contact">Contact us</string>
    <string name="please_contact_our_admin_before_top_up">Please contact our admin before top up</string>
    <string name="currentpw">Enter Current Password</string>
    <string name="enterCustomerName">Enter Customer Name</string>
    <string name="AdminName">Enter Admin Name</string>


    <string-array name="gamelist">
        <item>PUBG</item>
        <item>Dota2</item>
        <item>Arena Of Valor</item>
        <item>GTA5</item>
        <item>LOL</item>
        <item>Minecraft</item>
        <item>Call of Duty</item>
        <item>CSGO</item>
        <item>Others</item>
    </string-array>

</resources>