<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.project3275playmate.AfterPlayPages.ReviewExpert" android:background="@color/backgroundcolor3">
    <ImageView
            android:layout_width="145dp"
            android:layout_height="22dp" app:srcCompat="@drawable/logo" android:id="@+id/imgLogo"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="133dp" android:layout_marginStart="133dp" android:layout_marginEnd="133dp"
            android:layout_marginRight="133dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="47dp" android:background="#00FFFFFF"/>
    <EditText
            android:layout_width="241dp"
            android:layout_height="45dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/EName"
            android:hint="Enter your playmate's name" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="82dp" android:layout_marginEnd="116dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/imgLogo" app:layout_constraintHorizontal_bias="0.0"/>
    <RadioGroup
            android:layout_width="306dp"
            android:layout_height="177dp"
            android:background="@color/backgroundcolor" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="53dp" android:layout_marginEnd="47dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="19dp"
            app:layout_constraintTop_toBottomOf="@+id/reviewHint" android:id="@+id/Reviews">
        <RadioButton
                android:text="@string/RATING5"
                android:layout_width="match_parent"
                android:layout_height="35dp" android:id="@+id/review5"
                android:onClick="selectionRate"/>
        <RadioButton
                android:text="@string/RATING4"
                android:layout_width="match_parent"
                android:layout_height="38dp" android:id="@+id/review4"
                android:onClick="selectionRate"/>
        <RadioButton
                android:text="@string/RATING3"
                android:layout_width="match_parent"
                android:layout_height="33dp" android:id="@+id/review3"
                android:onClick="selectionRate"/>
        <RadioButton
                android:text="@string/RATING2"
                android:layout_width="match_parent"
                android:layout_height="35dp" android:id="@+id/review2"
                android:onClick="selectionRate"/>
        <RadioButton
                android:text="@string/RATING1"
                android:layout_width="match_parent"
                android:layout_height="35dp" android:id="@+id/review1"
                android:onClick="selectionRate"/>
    </RadioGroup>
    <TextView
            android:text="@string/ratingExplain"
            android:layout_width="326dp"
            android:layout_height="54dp" android:id="@+id/reviewHint"
            android:background="@color/teal_700" android:textStyle="bold"
            android:textSize="20sp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="64dp"
            android:layout_marginEnd="62dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/EName" android:textColor="@color/white"/>
    <EditText
            android:layout_width="194dp"
            android:layout_height="104dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/comments"
            android:hint="@string/leaveMessage" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="48dp" android:layout_marginEnd="49dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="23dp" app:layout_constraintTop_toBottomOf="@+id/Reviews"/>
    <Button
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/submitReviews"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="159dp"
            android:layout_marginEnd="164dp" app:layout_constraintEnd_toEndOf="parent"
            app:backgroundTint="@color/buttonColor"
            android:textSize="20sp" app:layout_constraintHorizontal_bias="0.388"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="84dp"
            android:onClick="rateExpert"/>


</androidx.constraintlayout.widget.ConstraintLayout>