<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterLogin.PlayerRegisterPage" android:background="@color/backgroundcolor4">
    <ImageView
            android:layout_width="145dp"
            android:layout_height="22dp" app:srcCompat="@drawable/logo" android:id="@+id/imgLogo"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="133dp" android:layout_marginStart="133dp" android:layout_marginEnd="133dp"
            android:layout_marginRight="133dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="47dp" android:background="#00FFFFFF"/>
    <TextView
            android:text="@string/PlayerRegisterText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView12"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp" android:layout_marginEnd="292dp" android:layout_marginRight="292dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.042"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="100dp" android:textSize="20sp"
            android:background="#00FFFFFF"/>
    <Spinner
            android:id="@+id/gamelistRegister"
            android:layout_width="255dp"
            android:layout_height="38dp"
            android:entries="@array/gamelist"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.596"
            android:background="@color/backgroundcolor5" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView12"/>
    <TextView
            android:text="@string/PlayerRegisterText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView20"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.215"
            android:background="#00FFFFFF" android:textSize="20sp" android:layout_marginTop="35dp"
            app:layout_constraintTop_toBottomOf="@+id/gamelistRegister"/>
    <RadioGroup
            android:layout_width="196dp"
            android:layout_height="76dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.432" android:id="@+id/radioGroup2"
            android:background="#00FFFFFF"
            android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/textView20">
        <RadioButton
                android:text="@string/PlayerRegisterRbtn1"
                android:layout_width="94dp"
                android:layout_height="37dp" android:id="@+id/radioButton4"
        />
        <RadioButton
                android:text="@string/PlayerRegisterRbtn2"
                android:layout_width="95dp"
                android:layout_height="34dp" android:id="@+id/radioButton2"
        />
    </RadioGroup>
    <TextView
            android:text="@string/PlayerRegisterText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView21"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup2" android:layout_marginTop="48dp"
            android:background="#00FFFFFF" android:textSize="16sp"/>
    <RadioGroup
            android:layout_width="160dp"
            android:layout_height="89dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView21" android:layout_marginTop="20dp"
            android:id="@+id/radioGroup3" app:layout_constraintHorizontal_bias="0.392" android:background="#00FFFFFF">
        <RadioButton
                android:text="@string/PlayerRegisterRbtn3"
                android:layout_width="101dp"
                android:layout_height="wrap_content" android:id="@+id/radioButton6"
        />
        <RadioButton
                android:text="@string/PlayerRegisterRbtn4"
                android:layout_width="116dp"
                android:layout_height="wrap_content" android:id="@+id/radioButton5"
        />
    </RadioGroup>
    <Button
            android:text="@string/EregisterSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnExpertRegisterSubmit"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.526"
            android:layout_marginBottom="68dp" app:layout_constraintTop_toBottomOf="@+id/radioGroup3"
            app:layout_constraintVertical_bias="0.315" app:backgroundTint="@color/logoColor" android:textSize="20sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>