<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="@drawable/gamebackground">
    <ImageView
            android:layout_width="264dp"
            android:layout_height="84dp" app:srcCompat="@drawable/logo" android:id="@+id/biglogo"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="133dp" android:layout_marginStart="133dp" android:layout_marginEnd="133dp"
            android:layout_marginRight="133dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="88dp" android:background="#00FFFFFF"
            app:layout_constraintHorizontal_bias="0.504"/>
    <TextView
            android:text="@string/HomepageText4_1"
            android:layout_width="146dp"
            android:layout_height="29dp" android:id="@+id/textView9"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="#00FFFFFF" app:layout_constraintHorizontal_bias="0.351"
            android:textColor="@color/white" android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <TextView
            android:text="@string/HomepageText3_1"
            android:layout_width="146dp"
            android:layout_height="29dp" android:id="@+id/textView8"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="45dp" android:layout_marginStart="45dp"
            app:layout_constraintEnd_toStartOf="@+id/textView4" android:layout_marginEnd="23dp"
            android:layout_marginRight="23dp" android:layout_marginTop="3dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintBottom_toTopOf="@+id/textView5"
            android:background="#00FFFFFF" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0" android:textColor="@color/white" android:textStyle="bold"/>
    <TextView
            android:text="@string/HomepageText2_1"
            android:layout_width="146dp"
            android:layout_height="29dp" android:id="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.324"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            android:background="#00FFFFFF" android:textColor="@color/white"
            android:textStyle="bold" android:layout_marginTop="21dp"
            app:layout_constraintTop_toBottomOf="@+id/biglogo"/>
    <TextView
            android:text="@string/HomepageText4_2"
            android:layout_width="138dp"
            android:layout_height="65dp" android:id="@+id/textView4"
            android:textSize="16sp"
            android:shadowColor="@android:color/holo_blue_dark"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="56dp" android:layout_marginRight="56dp"
            android:background="@color/backgroundcolor7"
            android:textColor="@color/white"
            android:layout_marginLeft="25dp" android:layout_marginStart="25dp"
            app:layout_constraintStart_toEndOf="@+id/textView5" android:layout_marginBottom="46dp"
            app:layout_constraintBottom_toTopOf="@+id/login"/>
    <TextView
            android:text="@string/HomepageText3_2"
            android:layout_width="151dp"
            android:layout_height="73dp" android:id="@+id/textView5"
            android:textSize="16sp"
            android:shadowColor="@android:color/holo_blue_dark"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/backgroundcolor8"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="40dp" app:layout_constraintBottom_toTopOf="@+id/login"
            android:textColor="@color/black"/>
    <TextView
            android:text="@string/HomepageText2_2"
            android:layout_width="142dp"
            android:layout_height="79dp" android:id="@+id/textView2"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="52dp"
            android:background="@color/backgroundcolor3"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@+id/textView3" app:layout_constraintTop_toBottomOf="@+id/textView7"
            android:textColor="@color/black"/>
    <TextView
            android:text="@string/HomepageText1_2"
            android:layout_width="153dp"
            android:layout_height="71dp" android:id="@+id/textView3"
            android:textSize="16sp"
            android:shadowColor="@android:color/holo_blue_dark"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/hintColor" android:textColor="@color/white"
            android:layout_marginLeft="36dp" android:layout_marginStart="36dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6"/>
    <TextView
            android:text="@string/HomepageText1_1"
            android:layout_width="146dp"
            android:layout_height="29dp" android:id="@+id/textView6"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.158"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            android:background="#00FFFFFF" android:textColor="@color/white" android:textStyle="bold"
            android:layout_marginTop="21dp" app:layout_constraintTop_toBottomOf="@+id/biglogo"/>
    <Button
            android:text="@string/HomepageBtn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/login"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:backgroundTint="@color/buttonColor"
            android:textSize="20sp"
            android:layout_marginBottom="36dp" app:layout_constraintBottom_toTopOf="@+id/register"
            android:textColor="@color/white"/>
    <Button
            android:text="@string/HomepageBtn2"
            android:layout_width="142dp"
            android:layout_height="52dp" android:id="@+id/register"
            app:layout_constraintTop_toBottomOf="@+id/login" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="36dp"
            app:backgroundTint="@color/buttonColor" android:textSize="20sp"
            app:layout_constraintHorizontal_bias="0.498" android:textColor="@color/white"/>
    <Button
            android:text="Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnTest"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="165dp"
            android:layout_marginEnd="158dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="45dp"
            app:layout_constraintTop_toBottomOf="@+id/register"/>
</androidx.constraintlayout.widget.ConstraintLayout>