<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.project3275playmate.RegisterLogin.ExpertRegisterPage" android:background="@color/backgroundcolor4">
    <ImageView
            android:layout_width="145dp"
            android:layout_height="22dp" app:srcCompat="@drawable/logo" android:id="@+id/imgLogo"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="133dp" android:layout_marginStart="133dp" android:layout_marginEnd="133dp"
            android:layout_marginRight="133dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="47dp" android:background="#00FFFFFF"/>
    <TextView
            android:text="@string/PlayerRegisterText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/chooseGameHint"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp" android:layout_marginEnd="292dp" android:layout_marginRight="292dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.042"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="100dp" android:textSize="20sp"
            android:background="#00FFFFFF"/>
    <Spinner
            android:id="@+id/getGamelistProfile"
            android:layout_width="255dp"
            android:layout_height="38dp"
            android:entries="@array/gamelist"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/backgroundcolor5" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/chooseGameHint"/>
    <TextView
            android:text="@string/PlayerRegisterText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView20"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.377"
            android:background="#00FFFFFF" android:textSize="20sp"
            android:layout_marginTop="50dp" app:layout_constraintTop_toBottomOf="@+id/getGamelistProfile"/>
    <RadioGroup
            android:layout_width="196dp"
            android:layout_height="76dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.427" android:id="@+id/userChooseGender"
            android:background="#00FFFFFF"
            android:layout_marginTop="26dp" app:layout_constraintTop_toBottomOf="@+id/textView20">
        <RadioButton
                android:text="@string/PlayerRegisterRbtn1"
                android:layout_width="94dp"
                android:layout_height="37dp" android:id="@+id/genderGirl"
                android:onClick="selectionGender"
        />
        <RadioButton
                android:text="@string/PlayerRegisterRbtn2"
                android:layout_width="95dp"
                android:layout_height="34dp" android:id="@+id/genderBoy"
                android:onClick="selectionGender"
        />
    </RadioGroup>
    <TextView
            android:text="@string/PlayerRegisterText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView21"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:background="#00FFFFFF" android:textSize="16sp" app:layout_constraintHorizontal_bias="0.494"
            android:textColor="@color/teal_700" android:layout_marginTop="27dp"
            app:layout_constraintTop_toBottomOf="@+id/userChooseGender"/>
    <RadioGroup
            android:layout_width="160dp"
            android:layout_height="89dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/addProfileNowOption" app:layout_constraintHorizontal_bias="0.47"
            android:background="#00FFFFFF"
            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/textView21" >
        <RadioButton
                android:text="@string/PlayerRegisterRbtn3"
                android:layout_width="101dp"
                android:layout_height="wrap_content" android:id="@+id/addProfileYes"
                android:onClick="selectionUpload"/>
        <RadioButton
                android:text="@string/PlayerRegisterRbtn4"
                android:layout_width="116dp"
                android:layout_height="wrap_content" android:id="@+id/addProfileNo"
                android:onClick="selectionUpload"/>
    </RadioGroup>
    <Button
            android:text="@string/EregisterSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/expertRegisterSubmit"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.501"
            android:layout_marginBottom="68dp" app:layout_constraintTop_toBottomOf="@+id/addProfileNowOption"
            app:layout_constraintVertical_bias="0.683" app:backgroundTint="@color/logoColor" android:textSize="20sp"
            android:onClick="submit"/>
</androidx.constraintlayout.widget.ConstraintLayout>